    extracted debug dumps).

* docutils/frontend.py:

  - Added help text for "--output-encoding-error-handler" and
    "--error-encoding-error-handler".

* docutils/writers/latex2e.py:

  - Added "--table-style=(standard|booktabs|nolines)"
  - figures get "here" option (LaTeX per default puts them at bottom),
    and figure content is centered.
  - Rowspan support for tables.

* docs/index.txt: "Docutils Project Documentation Overview", added to
  project.

* docs/ref/rst/directives.txt:

  - Added directive: "table".

* docs/user/rst/cheatsheet.txt: "The reStructuredText Cheat Sheet" added to
  project.  1 page for syntax, and a 1 page reference for directives
  and roles.  Source text to be used as-is; not meant to be converted
  to HTML.


Release 0.3.3 (2004-05-09)
==========================

* docutils/__init__.py:

  - 0.3.1: Reorganized config file format (multiple sections); see
    docs/config.txt.
  - Added unknown_reference_resolvers attribute to TransformSpec.
  - 0.3.2: Interpreted text reorganization.
  - 0.3.3: Released.

* docutils/core.py:

  - Catch system messages to stop tracebacks from parsing errors.
  - Catch exceptions during processing report & exit without
    tracebacks, except when "--traceback" used.
  - Reordered components for OptionParser; application comes last.
  - Added "config_section" parameter to several methods and functions,
    allowing front ends to easily specify their config file sections.
  - Added publish_parts convenience function to allow access to individual
    parts of a document.

* docutils/examples.py: Added to project; practical examples of
  Docutils client code, to be used as-is or as models for variations.

* docutils/frontend.py:

  - Added "--traceback" & "--no-traceback" options ("traceback"
    setting).
  - Implemented support for config file reorganization:
    ``standard_config_files`` moved from ``ConfigParser`` to
    ``OptionParser``; added
    ``OptionParser.get_config_file_settings()`` and